--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageProducts.cshtml
@@ -8,7 +8,7 @@
 	}
 }
 
-<div class="product-grid home-page-product-grid block">
+<div class="product-grid product-grid-home-page block">
 	<div class="heading heading-center">
 		<h3 class="heading-title fs-h1">@T("HomePage.Products")</h3>
 	</div>
