--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CategoryMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CategoryMenu.cshtml
@@ -24,48 +24,72 @@
 	}
 }
 
-<div class="block block-catmenu m-b-0">
-	<nav class="catmenu">
-		<ul class="catmenu-path list-unstyled">
-			@if (path.Count > 0)
-			{
-				foreach (var node in path)
-				{
-					@CreateMenuItem(node, selectedNode, true)
-				}
-			}
-			else
-			{
-				<li class="catmenu-item selected">
-					<span class="catmenu-link">@T("Categories")</span>
-				</li>
-			}
-		</ul>
-
-		<ul class="catmenu-body list-unstyled">
-			@foreach (var node in items)
-			{
-				@CreateMenuItem(node, selectedNode, false)
-			}
-		</ul>
-	</nav>
-</div>
-
-@helper CreateMenuItem(TreeNode<MenuItem> node, TreeNode<MenuItem> curNode, bool isPathItem)
-{
-	var isSelected = node == curNode;
-	var attrCount = Html.Attr("data-count", node.Value.ElementsCount.ToString(), node.Value.ElementsCount.HasValue);
-
-	<li class="catmenu-item@(isSelected ? " selected" : "")@(!isPathItem && node.HasChildren ? " parent" : "")@(isPathItem && !isSelected ? " expanded" : "")">
-		@if (isSelected)
+<div class="block block-catmenu mb-3">
+	<nav class="list-group catmenu">
+		@if (path.Count > 0)
 		{
-			<span class="catmenu-link has-count" @Html.Raw(attrCount)>@node.Value.Text</span>
+			foreach (var node in path)
+			{
+				@CreateMenuItem(node, selectedNode, true)
+			}
 		}
 		else
 		{
-			<a class="catmenu-link has-count" href="@node.Value.GenerateUrl(this.Url)" @Html.Raw(attrCount)>@node.Value.Text</a>
+			@*<li class="catmenu-item selected">
+				<span class="catmenu-link">@T("Categories")</span>
+			</li>*@
 		}
 
-	</li>
-}
+		@foreach (var node in items)
+		{
+			@CreateMenuItem(node, selectedNode, false)
+		}
+	</nav>
+</div>
+
+@helper CreateMenuItem(TreeNode<MenuItem> node, TreeNode<MenuItem> curNode, bool isPathItem) {{
+	var isSelected = node == curNode;
+	var attrCount = Html.Attr("data-count", node.Value.ElementsCount.ToString(), node.Value.ElementsCount.HasValue);
+	var cssClass = "list-group-item";
+
+	if (isSelected)
+	{
+		cssClass += " active";
+	}
+	else
+	{
+		cssClass += " list-group-item-action";
+	}
+
+	if (isPathItem)
+	{
+		cssClass += " catmenu-path-item";
+		if (!isSelected)
+		{
+			cssClass += " expanded";
+		}
+	}
+	else
+	{
+		cssClass += " catmenu-item";
+		if (node.HasChildren)
+		{
+			cssClass += " parent";
+		}
+
+	}
+
+	if (isSelected)
+	{
+		<div class="@cssClass">
+			<span class="has-count" @Html.Raw(attrCount)>@node.Value.Text</span>
+		</div>
+	}
+	else
+	{
+		<a class="@cssClass" href="@node.Value.GenerateUrl(this.Url)">
+			<span class="has-count" @Html.Raw(attrCount)>@node.Value.Text</span>
+		</a>
+	}
+}}
 
