--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -95,8 +95,12 @@
         max-width: 100px;
     }
 
+    .col-data {
+        line-height: 1.3;
+    }
+
     .col-data > * {
-        //display: block;
+        display: block;
         margin-bottom: 0.5rem;
     }
 
