--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -1,6 +1,9 @@
+/// <reference path="bs4/scss/bootstrap.scss" />
+
 /* Theme: ALPHA 
 ------------------------------ */
 
+@import 'bs4/scss/_variables.scss';
 @import '~/.app/themevars.scss';
 
 $enable-rounded:                true;
@@ -96,6 +99,11 @@ $input-box-shadow-focus:        none;
 $input-height:                  (($font-size-base * $input-line-height) + ($input-padding-y * 2));
 $input-height-lg:               (($font-size-lg * $input-line-height) + ($input-padding-y-lg * 2));
 $input-height-sm:               (($font-size-sm * $input-line-height) + ($input-padding-y-sm * 2));
+
+
+// Dropdown
+$dropdown-link-active-color:    $dropdown-link-hover-color;
+$dropdown-link-active-bg:       darken($dropdown-link-hover-bg, 4%);
 
 
 // Pagination
