--- a/src/Presentation/SmartStore.Web/Views/Customer/AddressAdd.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/AddressAdd.cshtml
@@ -16,7 +16,7 @@
     //Merge ModelState (required for validation)
     dataDictAddress.ModelState.Merge(ViewData.ModelState);
     dataDictAddress.TemplateInfo.HtmlFieldPrefix = "Address";
-    Html.Partial("_CreateOrUpdateAddress", Model.Address, dataDictAddress);
+    Html.RenderPartial("_CreateOrUpdateAddress", Model.Address, dataDictAddress);
             
     <div class="form-group row">
         <div class="col-sm-offset-3 col-sm-9">
