Changed name of InfoBlockModel to ServiceMenuModel

--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/ServiceMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/ServiceMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model InfoBlockModel
+﻿@model ServiceMenuModel
 @using SmartStore.Web.Models.Common;
 
 @{ Html.RenderWidget("servicemenu_before"); }
