Some cleanup & bugfixes

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_checkout.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_checkout.scss
@@ -212,9 +212,7 @@
 .terms-of-service.alert {
     a.read {
         font-weight: bold;
-        &:hover {
-            cursor: pointer;
-        }
+        &:hover { cursor: pointer; }
     }
 }
 
