--- a/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
@@ -79,7 +79,7 @@
                         
                         @if (item.Tags.Count > 0)
                         {
-                            <div class="blogpost-tags well well-small">
+                            <div class="blogpost-tags">
                                 <i class="fa fa-tags" title='@T("Blog.Tags")'></i>
                                 @for (int i = 0, length = item.Tags.Count; i < length; i++)
                                 {
