--- a/src/Presentation/SmartStore.Web/Views/News/NewsItem.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/NewsItem.cshtml
@@ -2,7 +2,7 @@
 
 @using SmartStore.Web.Models.News;
 @{
-    Layout = "NewsPagingFilteringModel";
+    Layout = "_Layout";
 
     Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Title);
     Html.AddMetaDescriptionParts(Model.MetaDescription);
@@ -17,9 +17,7 @@
     </div>
 
     <div class="page-title">
-        <h1>
-            @Model.Title
-        </h1>
+        <h1>@Model.Title</h1>
     </div>
 
     <div class="news-body">
@@ -36,7 +34,7 @@
 
         @if (Model.AllowComments)
         {
-            <div class="new-comment well">
+            <div class="new-comment">
                 <h3 class="title">@T("News.Comments.LeaveYourComment")</h3>
                 @using (Html.BeginForm())
                 {
